@@ -1,2 +1,2 @@
 #!/usr/bin/env sh
-java -jar LoteriaDeNavidad.jar
+java -XX:+UseCompactObjectHeaders -jar LoteriaDeNavidad.jar
